feat(user flow): added modification for user flow adaptation
